# CMakeList.txt : CMake project for CMake(REGISTRATION FORM), include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "CMake(REGISTRATION FORM).cpp" "CMake(REGISTRATION FORM).h")

# TODO: Add tests and install targets if needed.
